2005-01-22 15:38 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassEditor.m: Replaced use of the class methods
	from GormDocument with the appropriate function call.
	* GormClassInspector.m: Replaced use of the class methods
	from GormDocument with the appropriate function call.
	* GormDocument.[hm]: Removed the formatting class methods.
	* GormFunctions.[hm]: Added indentifierString(), formatAction(), 
	formatOutlet() functions.
	NOTE: The correct way to apply this formatting is using NSFormatter
	subclasses.  This will be done after the pending release.
	
2005-01-22 14:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Reorganized the files in the resources, hearders
	and source lists.

2005-01-22 12:14 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: In [GormDocument detachObject:] made 
	[GormDocument setObject:isVisibleAtLaunch:] called only when the
	object is an NSWindow subclass.
	* GormImageEditor.m: Added implementation of addObject: to
	prevent addition of duplicate images.
	* GormImage.h: Added isEqual: so that containsObject: can
	find the image.
	* GormImage.m: Added isEqual: declaration.
	* GormSoundEditor.m: Added implementation of addObject to
	prevent addition of duplicate sounds.
	* GormSound.h: Added isEqual: so that containsObject can
	find the sound.
	* GormSound.m: Added isEqual: declaration.

2005-01-11 22:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GModelDecoder.m: Default NSWindows being imported from the
	.gmodel to the default window background color in the method
	[GModelApplication initWithModelUnarchiver:].

2005-01-09 01:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: Added missing changeFont: method.
	* GormClassManager.m: Changed code to read only the additions to 
	FirstResponder from the data.classes file.
	* GormFilePrefsManager.m: Updated version to 0.8.7.
	* GormImageEditor.m: Made some logs "debug".